--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "BOT_NUMBER": {
-      "description": "94729493354",
+      "description": "94713330764",
       "required": true
     },  
 
@@ -17,7 +17,7 @@
     },
 
     "SESSION_ID": {
-      "description": "PRABATH-MD~478WzYQB#S1CYi5NMa3OUqNh7vNq7exEyBSUfa1UX4TjVGGKAUYs",
+      "description": "PRABATH-MD~9udiHKAL#d5tz-VXEHCq64IFIJhZ11pGvjFK4wC4fSy9SQboy3kY",
       "required": false
     },
     
@@ -26,7 +26,7 @@
       "required": true
     },
     "GITHUB_AUTH_TOKEN": {
-      "description": "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",
+      "description": "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",
       "required": true
     }   
 },
