--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "BOT_NUMBER": {
-      "description": "94713330764",
+      "description": "94772476404",
       "required": true
     },  
 
@@ -17,7 +17,7 @@
     },
 
     "SESSION_ID": {
-      "description": "PRABATH-MD~9udiHKAL#d5tz-VXEHCq64IFIJhZ11pGvjFK4wC4fSy9SQboy3kY",
+      "description": "PRABATH-MD~13sTlDzK#C_W-WcK_dK3U7d8OSUDEcb-oO3pKWuRFNsbEBqN51hI",
       "required": false
     },
     
