--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "BOT_NUMBER": {
-      "description": "94772476404",
+      "description": "94783387628",
       "required": true
     },  
 
@@ -17,7 +17,7 @@
     },
 
     "SESSION_ID": {
-      "description": "PRABATH-MD~13sTlDzK#C_W-WcK_dK3U7d8OSUDEcb-oO3pKWuRFNsbEBqN51hI",
+      "description": "PRABATH-MD_fEjMzqYa",
       "required": false
     },
     
@@ -26,7 +26,7 @@
       "required": true
     },
     "GITHUB_AUTH_TOKEN": {
-      "description": "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",
+      "description": "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",
       "required": true
     }   
 },
